@@ -18,24 +18,30 @@ package com.github.tomakehurst.wiremock.recording;
 import static com.github.tomakehurst.wiremock.matching.RequestPatternBuilder.newRequestPattern;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.*;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import com.github.tomakehurst.wiremock.client.WireMock;
 import com.github.tomakehurst.wiremock.http.ResponseDefinition;
 import com.github.tomakehurst.wiremock.matching.MatchResult;
 import com.github.tomakehurst.wiremock.stubbing.StubMapping;
+import com.google.common.collect.ImmutableList;
 import java.util.List;
 import org.junit.jupiter.api.Test;
 
 public class SnapshotStubMappingPostProcessorTest {
-  private static final List<StubMapping> TEST_STUB_MAPPINGS =
-      List.of(
+
+  // NOTE: testStubMappings is not deeply immutable, as StubMappings are mutable, and to preserve
+  // hermeticity must be an instance rather than a class variable.
+  private final List<StubMapping> testStubMappings =
+      ImmutableList.of(
           WireMock.get("/foo").build(), WireMock.get("/bar").build(), WireMock.get("/foo").build());
 
   @Test
-  public void processFiltersRepeatedRequestsWhenNotRecordingScenarios() {
+  public void processWithRecordRepeatsAsScenariosFalseShouldFilterRepeatedRequests() {
     final List<StubMapping> actual =
         new SnapshotStubMappingPostProcessor(false, noopTransformerRunner(), null, null)
-            .process(TEST_STUB_MAPPINGS);
+            .process(testStubMappings);
 
     assertThat(actual, hasSize(2));
     assertThat(actual.get(0).getRequest().getUrl(), equalTo("/foo"));
@@ -43,7 +49,7 @@ public class SnapshotStubMappingPostProcessorTest {
   }
 
   @Test
-  public void processRunsTransformers() {
+  public void processWithTransformerShouldTransformStubMappingRequestUrls() {
     SnapshotStubMappingTransformerRunner transformerRunner =
         new SnapshotStubMappingTransformerRunner(null) {
           @Override
@@ -57,7 +63,7 @@ public class SnapshotStubMappingPostProcessorTest {
 
     final List<StubMapping> actual =
         new SnapshotStubMappingPostProcessor(false, transformerRunner, null, null)
-            .process(TEST_STUB_MAPPINGS);
+            .process(testStubMappings);
 
     assertThat(actual, hasSize(2));
     assertThat(actual.get(0).getRequest().getUrl(), equalTo("/foo/transformed"));
@@ -65,13 +71,41 @@ public class SnapshotStubMappingPostProcessorTest {
   }
 
   @Test
-  public void processExtractsBodiesWhenMatched() {
+  public void
+      processWithRecordRepeatsAsScenariosAndTransformerShouldRunTransformerBeforeScenarioProcessor() {
+    SnapshotStubMappingTransformerRunner transformerRunner =
+        new SnapshotStubMappingTransformerRunner(null) {
+          @Override
+          public StubMapping apply(StubMapping stubMapping) {
+            // Return StubMapping with "/transformed" at the end of the original URL
+            String url = stubMapping.getRequest().getUrl();
+            return new StubMapping(
+                newRequestPattern().withUrl(url + "/transformed").build(), ResponseDefinition.ok());
+          }
+        };
+
+    final List<StubMapping> actual =
+        new SnapshotStubMappingPostProcessor(true, transformerRunner, null, null)
+            .process(testStubMappings);
+
+    assertThat(actual, hasSize(3));
+    assertThat(actual.get(0).getRequest().getUrl(), equalTo("/foo/transformed"));
+    assertThat(actual.get(1).getRequest().getUrl(), equalTo("/bar/transformed"));
+    assertThat(actual.get(2).getRequest().getUrl(), equalTo("/foo/transformed"));
+
+    assertTrue(actual.get(0).isInScenario());
+    assertFalse(actual.get(1).isInScenario());
+    assertTrue(actual.get(2).isInScenario());
+  }
+
+  @Test
+  public void processWithBodyExtractMatcherAndBodyExtractorShouldExtractsBodiesWhenMatched() {
     final ResponseDefinitionBodyMatcher bodyMatcher =
         new ResponseDefinitionBodyMatcher(0, 0) {
           @Override
           public MatchResult match(ResponseDefinition responseDefinition) {
             // Only match the second stub mapping
-            return responseDefinition == TEST_STUB_MAPPINGS.get(1).getResponse()
+            return responseDefinition == testStubMappings.get(1).getResponse()
                 ? MatchResult.exactMatch()
                 : MatchResult.noMatch();
           }
@@ -88,7 +122,7 @@ public class SnapshotStubMappingPostProcessorTest {
     final List<StubMapping> actual =
         new SnapshotStubMappingPostProcessor(
                 false, noopTransformerRunner(), bodyMatcher, bodyExtractor)
-            .process(TEST_STUB_MAPPINGS);
+            .process(testStubMappings);
 
     assertThat(actual, hasSize(2));
     // Should've only modified second stub mapping
